{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 173,
  "lineage": "86e11397-ecd1-a74e-b5b8-ad0b288f82ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4d230445076ef91",
            "arn": "arn:aws:ec2:sa-east-1:604876660468:instance/i-0aaa7087dd67089d3",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aaa7087dd67089d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "planejamente",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01386e7ae3daf6ac9",
            "private_dns": "ip-10-0-1-173.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-15-228-203-21.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.203.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca89bf29206f1efe",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b70de6b6ffa9f25",
            "tags": {
              "Name": "Kanye"
            },
            "tags_all": {
              "Name": "Kanye"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d10a6bf8cebd94e"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.some_public_subnet",
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "some_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:604876660468:internet-gateway/igw-0c510494b08126130",
            "id": "igw-0c510494b08126130",
            "owner_id": "604876660468",
            "tags": {
              "Name": "Some Internet Gateway"
            },
            "tags_all": {
              "Name": "Some Internet Gateway"
            },
            "vpc_id": "vpc-07c43406494652a07"
          },
          "dependencies": [
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:604876660468:route-table/rtb-0af75615527c101cc",
            "id": "rtb-0af75615527c101cc",
            "owner_id": "604876660468",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c510494b08126130",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c510494b08126130",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c43406494652a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.some_ig",
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b4878369c09c5a5",
            "route_table_id": "rtb-0af75615527c101cc",
            "subnet_id": "subnet-09b70de6b6ffa9f25"
          },
          "dependencies": [
            "aws_internet_gateway.some_ig",
            "aws_route_table.public_rt",
            "aws_subnet.some_public_subnet",
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:604876660468:security-group/sg-00d10a6bf8cebd94e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d10a6bf8cebd94e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "604876660468",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c43406494652a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "some_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:604876660468:subnet/subnet-0b1a4ebb5f4e0921a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1a4ebb5f4e0921a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "604876660468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Some Private Subnet"
            },
            "tags_all": {
              "Name": "Some Private Subnet"
            },
            "vpc_id": "vpc-07c43406494652a07"
          },
          "dependencies": [
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "some_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:604876660468:subnet/subnet-09b70de6b6ffa9f25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b70de6b6ffa9f25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "604876660468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Some Public Subnet"
            },
            "tags_all": {
              "Name": "Some Public Subnet"
            },
            "vpc_id": "vpc-07c43406494652a07"
          },
          "dependencies": [
            "aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "simple_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:604876660468:vpc/vpc-07c43406494652a07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0a3f79e89cb9eca",
            "default_route_table_id": "rtb-0c89496c0b3d2bc1f",
            "default_security_group_id": "sg-0acdd0baa3a6cc3db",
            "dhcp_options_id": "dopt-0c3ce20eeca300080",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c43406494652a07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c89496c0b3d2bc1f",
            "owner_id": "604876660468",
            "tags": {
              "Name": "simple_vpc"
            },
            "tags_all": {
              "Name": "simple_vpc"
            }
          }
        }
      ]
    }
  ]
}